--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,14 @@
 # EditorConfig is awesome: http://EditorConfig.org
+
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
-end_of_line = lf
-insert_final_newline = true
-charset = utf-8
-indent_style = tab
-indent_size = 3
+  charset = utf-8
+  end_of_line = lf
+  indent_size = 2
+  indent_style = space
+  insert_final_newline = true
+  trim_trailing_whitespace = true
 
-[*.yml]
-indent_style = space
-indent_size = 2
+[*.md]
+  trim_trailing_whitespace = false
