--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/uktrade/omis-frontend#readme",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "4.15.4",
     "morgan": "1.8.2",
     "nunjucks": "3.0.1",
