--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "dotenv": "^4.0.0",
     "express": "4.15.4",
+    "express-session": "^1.15.5",
+    "memorystore": "^1.5.0",
     "morgan": "1.8.2",
     "nunjucks": "3.0.1",
     "raven": "2.1.2",
