--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nunjucks": "3.0.1",
     "raven": "2.1.2",
     "request": "2.81.0",
+    "request-promise-native": "^1.0.5",
     "winston": "2.3.1"
   },
   "devDependencies": {
