--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^4.0.0",
     "express": "4.15.4",
     "express-session": "^1.15.5",
+    "lodash": "^4.17.4",
     "memorystore": "^1.5.0",
     "morgan": "1.8.2",
     "nunjucks": "3.0.1",
