--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "express": "4.15.4",
     "express-session": "^1.15.5",
     "lodash": "^4.17.4",
+    "markdown-it": "^8.4.0",
     "memorystore": "^1.5.0",
     "morgan": "1.8.2",
     "nunjucks": "3.0.1",
+    "nunjucks-markdown": "^2.0.1",
     "raven": "2.1.2",
     "request": "2.81.0",
     "request-promise-native": "^1.0.5",
