--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,18 @@
 {
-	"extends": "eslint:recommended",
-
-	"env": {
-		"browser": false,
-		"node": true
-	},
-
-	"parserOptions": {
-		"ecmaVersion": 6
-	},
-
-	"rules": {
-			"brace-style": [ 2, "1tbs", { "allowSingleLine": true } ],
-			"no-undefined": 2,
-			"no-use-before-define": [ 2, { "functions": false, "classes": true } ],
-			"arrow-body-style": 2,
-			"arrow-parens": 2,
-			"strict": [ 2, "never" ],
-			"no-console": 2,
-			"semi": [ 2, "always" ]
-		}
-	}
+  "extends": "standard",
+  "parser": "babel-eslint",
+  "plugins": [],
+  "rules": {
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "always-multiline",
+        "objects": "always-multiline",
+        "imports": "never",
+        "exports": "never",
+        "functions": "ignore"
+      }
+    ],
+    "object-curly-spacing": ["error", "always"]
+  }
+}
