--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "npm run test:unit",
     "test:unit": "NODE_ENV=development; LOG_LEVEL=error; JASMINE_CONFIG_PATH=src/test/app/jasmine.json jasmine",
+    "lint": "npm-run-all lint:all:*",
+    "lint:all:js": "eslint ./test ./src",
+    "lint:modified:js": "CHANGED_FILES=$(git diff --staged --name-only -- '*.js'); if [ \"$CHANGED_FILES\" ]; then eslint $(echo $CHANGED_FILES); fi",
     "start": "NODE_ENV=production node --use-strict src/app/server.js",
     "watch": "nodemon --use-strict src/app/app.js"
   },
@@ -20,16 +23,23 @@
   },
   "homepage": "https://github.com/uktrade/omis-frontend#readme",
   "dependencies": {
+    "babel-eslint": "^8.0.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "csurf": "^1.9.0",
     "dotenv": "^4.0.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "express": "4.15.4",
     "express-session": "^1.15.5",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
     "memorystore": "^1.5.0",
     "morgan": "1.8.2",
+    "npm-run-all": "^4.1.1",
     "nunjucks": "3.0.1",
     "nunjucks-markdown": "^2.0.1",
     "raven": "2.1.2",
@@ -39,7 +49,7 @@
   },
   "devDependencies": {
     "compression": "1.7.0",
-    "eslint": "4.5.0",
+    "eslint": "^4.5.0",
     "jasmine": "2.7.0",
     "jasmine-core": "2.7.0",
     "nodemon": "1.11.0",
