--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "start": "NODE_ENV=production node --use-strict src/app/server.js",
     "develop": "run-p watch:app:*",
+    "clean": "del .build",
+    "build": "npm run clean && webpack",
     "test": "npm run test:unit",
     "test:unit": "NODE_ENV=development; LOG_LEVEL=error; JASMINE_CONFIG_PATH=src/test/app/jasmine.json jasmine",
     "lint": "npm-run-all lint:all:*",
     "lint:all:js": "eslint ./test ./src",
     "lint:modified:js": "CHANGED_FILES=$(git diff --staged --name-only -- '*.js'); if [ \"$CHANGED_FILES\" ]; then eslint $(echo $CHANGED_FILES); fi",
+    "watch:app:client": "webpack --watch --progress",
     "watch:app:server": "nodemon $NODE_DEBUG_OPTION --use-strict"
   },
   "repository": {
@@ -24,25 +27,44 @@
   },
   "homepage": "https://github.com/uktrade/omis-frontend#readme",
   "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "css-loader": "^0.28.7",
     "csurf": "^1.9.0",
+    "del-cli": "^1.1.0",
     "express": "4.15.4",
     "express-session": "^1.15.5",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "fast-sass-loader": "^1.3.0",
+    "file-loader": "^0.11.2",
+    "image-webpack-loader": "^3.4.2",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
     "memorystore": "^1.5.0",
     "morgan": "1.8.2",
+    "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
     "nunjucks": "3.0.1",
     "nunjucks-markdown": "^2.0.1",
+    "postcss-loader": "^2.0.6",
     "raven": "2.1.2",
     "request": "2.81.0",
     "request-promise-native": "^1.0.5",
+    "resolve-url-loader": "^2.1.0",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.6.0",
+    "webpack-assets-manifest": "^1.0.0",
+    "webpack-merge": "^4.1.0",
     "winston": "2.3.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
+    "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^1.2.0",
     "compression": "1.7.0",
     "dotenv": "^4.0.0",
     "eslint": "^4.5.0",
