--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "request": "2.81.0",
     "request-promise-native": "^1.0.5",
     "resolve-url-loader": "^2.1.0",
+    "serve-favicon": "^2.4.5",
     "style-loader": "^0.18.2",
     "webpack": "^3.6.0",
     "webpack-assets-manifest": "^1.0.0",
