--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "fast-sass-loader": "^1.3.0",
     "file-loader": "^0.11.2",
+    "govuk_frontend_toolkit": "^7.0.1",
     "image-webpack-loader": "^3.4.2",
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
