--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
     "csurf": "^1.9.0",
+    "date-fns": "^1.28.5",
     "del-cli": "^1.1.0",
     "express": "4.15.4",
     "express-session": "^1.15.5",
@@ -46,6 +47,7 @@
     "lodash": "^4.17.4",
     "markdown-it": "^8.4.0",
     "memorystore": "^1.5.0",
+    "moment": "^2.18.1",
     "morgan": "1.8.2",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
