--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
+    "case": "^1.5.3",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
     "csurf": "^1.9.0",
