--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "The public front end for OMIS",
   "main": "src/app/app.js",
+  "engines": {
+    "node": "8.6.0"
+  },
   "scripts": {
-    "start": "NODE_ENV=production node --use-strict src/app/server.js",
+    "start": "npm run-script build && NODE_ENV=production node --use-strict src/app/server.js",
     "develop": "run-p watch:app:*",
     "clean": "del .build",
     "build": "npm run clean && webpack",
@@ -32,7 +35,9 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
+    "browser-sync": "^2.18.13",
     "case": "^1.5.3",
+    "compression": "1.7.0",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
     "csurf": "^1.9.0",
@@ -65,13 +70,11 @@
     "webpack": "^3.6.0",
     "webpack-assets-manifest": "^1.0.0",
     "webpack-merge": "^4.1.0",
+    "browser-sync-webpack-plugin": "^1.2.0",
     "winston": "2.3.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.1",
-    "browser-sync": "^2.18.13",
-    "browser-sync-webpack-plugin": "^1.2.0",
-    "compression": "1.7.0",
     "eslint": "^4.5.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
