--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "dotenv": "^4.0.0",
     "express": "4.15.4",
     "express-session": "^1.15.5",
+    "express-sslify": "^1.2.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "fast-sass-loader": "^1.3.0",
     "file-loader": "^0.11.2",
