--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "8.6.0"
   },
   "scripts": {
-    "start": "npm run-script build && NODE_ENV=production node --use-strict src/app/server.js",
+    "start": "NODE_ENV=production node --use-strict src/app/server.js",
     "develop": "run-p watch:app:*",
     "clean": "del .build",
     "build": "npm run clean && webpack",
@@ -18,6 +18,7 @@
     "lint:modified:js": "CHANGED_FILES=$(git diff --staged --name-only -- '*.js'); if [ \"$CHANGED_FILES\" ]; then eslint $(echo $CHANGED_FILES); fi",
     "watch:app:client": "webpack --watch --progress",
     "watch:app:server": "nodemon $NODE_DEBUG_OPTION --use-strict"
+    "heroku-postbuild": "npm run-script build"
   },
   "repository": {
     "type": "git",
