--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:all:js": "eslint ./test ./src",
     "lint:modified:js": "CHANGED_FILES=$(git diff --staged --name-only -- '*.js'); if [ \"$CHANGED_FILES\" ]; then eslint $(echo $CHANGED_FILES); fi",
     "watch:app:client": "webpack --watch --progress",
-    "watch:app:server": "nodemon $NODE_DEBUG_OPTION --use-strict"
+    "watch:app:server": "nodemon $NODE_DEBUG_OPTION --use-strict",
     "heroku-postbuild": "npm run-script build"
   },
   "repository": {
