--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
     "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^1.2.0",
     "case": "^1.5.3",
     "compression": "1.7.0",
     "cookie-parser": "^1.4.3",
@@ -60,6 +61,7 @@
     "morgan": "1.8.2",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.1.1",
+    "numeral": "^2.0.6",
     "nunjucks": "3.0.1",
     "nunjucks-markdown": "^2.0.1",
     "postcss-loader": "^2.0.6",
@@ -72,7 +74,6 @@
     "webpack": "^3.6.0",
     "webpack-assets-manifest": "^1.0.0",
     "webpack-merge": "^4.1.0",
-    "browser-sync-webpack-plugin": "^1.2.0",
     "winston": "2.3.1"
   },
   "devDependencies": {
