--- a/package.json
+++ b/package.json
@@ -41,56 +41,56 @@
     "babel-preset-es2015": "^6.24.1",
     "body-parser": "^1.18.2",
     "browser-sync": "^2.23.6",
-    "browser-sync-webpack-plugin": "^1.2.0",
+    "browser-sync-webpack-plugin": "^2.0.1",
     "case": "^1.5.4",
-    "compression": "1.7.0",
+    "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.9",
     "csurf": "^1.9.0",
     "date-fns": "^1.29.0",
     "del-cli": "^1.1.0",
-    "dotenv": "^4.0.0",
-    "express": "4.15.4",
+    "dotenv": "^5.0.0",
+    "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-sslify": "^1.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "fast-sass-loader": "^1.4.0",
-    "file-loader": "^0.11.2",
-    "govuk_frontend_toolkit": "^7.2.0",
-    "image-webpack-loader": "^3.4.2",
-    "lodash": "^4.17.4",
-    "markdown-it": "^8.4.0",
+    "file-loader": "^1.1.6",
+    "govuk_frontend_toolkit": "^7.4.1",
+    "image-webpack-loader": "^4.1.0",
+    "lodash": "^4.17.5",
+    "markdown-it": "^8.4.1",
     "memorystore": "^1.6.0",
     "moment": "^2.20.1",
-    "morgan": "1.8.2",
+    "morgan": "^1.9.0",
     "node-sass": "^4.7.2",
     "npm-run-all": "^4.1.2",
     "numeral": "^2.0.6",
-    "nunjucks": "3.0.1",
+    "nunjucks": "^3.0.1",
     "nunjucks-markdown": "^2.0.1",
-    "postcss-loader": "^2.0.10",
-    "raven": "2.1.2",
-    "request": "2.81.0",
+    "postcss-loader": "^2.1.0",
+    "raven": "^2.4.1",
+    "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
-    "resolve-url-loader": "^2.1.0",
+    "resolve-url-loader": "^2.2.1",
     "serve-favicon": "^2.4.5",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.10.0",
+    "style-loader": "^0.20.2",
+    "webpack": "^3.11.0",
     "webpack-assets-manifest": "^1.0.0",
     "webpack-merge": "^4.1.1",
-    "winston": "2.3.1"
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
-    "eslint": "^4.16.0",
+    "eslint": "^4.17.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-node": "^6.0.0",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "jasmine": "2.7.0",
-    "jasmine-core": "2.7.0",
-    "nodemon": "1.11.0",
-    "proxyquire": "1.8.0"
+    "jasmine": "^3.0.0",
+    "jasmine-core": "^2.99.1",
+    "nodemon": "^1.15.0",
+    "proxyquire": "^1.8.0"
   }
 }
