--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "browser-sync": "^2.23.6",
     "browser-sync-webpack-plugin": "^2.0.1",
     "case": "^1.5.4",
+    "client-sessions": "^0.8.0",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.9",
