--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "contributors": [
     "Dom Smith <dom@teneightfive.com> (http://github.com/teneightfive)",
-    "Graham Veal (https://github.com/web-bert)"
+    "Graham Veal (https://github.com/web-bert)",
+    "Zac Tolley <zac@thetolleys.com> (https://github.com/ztolley)"
   ],
   "license": "MIT",
   "bugs": {
@@ -35,63 +36,63 @@
   "homepage": "https://github.com/uktrade/omis-frontend#readme",
   "dependencies": {
     "axios": "^0.17.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
-    "body-parser": "^1.18.2",
-    "browser-sync": "^2.23.6",
-    "browser-sync-webpack-plugin": "^2.0.1",
-    "case": "^1.5.4",
+    "body-parser": "^1.18.3",
+    "browser-sync": "^2.24.4",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "case": "^1.5.5",
     "client-sessions": "^0.8.0",
-    "compression": "^1.7.1",
+    "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
-    "css-loader": "^0.28.9",
+    "css-loader": "^0.28.11",
     "csurf": "^1.9.0",
     "date-fns": "^1.29.0",
     "del-cli": "^1.1.0",
-    "dotenv": "^5.0.0",
-    "express": "^4.16.2",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-sslify": "^1.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "fast-sass-loader": "^1.4.0",
-    "file-loader": "^1.1.6",
+    "fast-sass-loader": "^1.4.5",
+    "file-loader": "^1.1.11",
     "govuk_frontend_toolkit": "^7.4.1",
-    "image-webpack-loader": "^4.1.0",
-    "lodash": "^4.17.5",
+    "image-webpack-loader": "^4.2.0",
+    "lodash": "^4.17.10",
     "markdown-it": "^8.4.1",
     "memorystore": "^1.6.0",
-    "moment": "^2.20.1",
+    "moment": "^2.22.1",
     "morgan": "^1.9.0",
-    "node-sass": "^4.7.2",
-    "npm-run-all": "^4.1.2",
+    "node-sass": "^4.9.0",
+    "npm-run-all": "^4.1.3",
     "numeral": "^2.0.6",
-    "nunjucks": "^3.0.1",
+    "nunjucks": "^3.1.2",
     "nunjucks-markdown": "^2.0.1",
-    "postcss-loader": "^2.1.0",
-    "raven": "^2.4.1",
-    "request": "^2.83.0",
+    "postcss-loader": "^2.1.5",
+    "raven": "^2.6.2",
+    "request": "^2.86.0",
     "request-promise-native": "^1.0.5",
-    "resolve-url-loader": "^2.2.1",
-    "serve-favicon": "^2.4.5",
-    "style-loader": "^0.20.2",
+    "resolve-url-loader": "^2.3.0",
+    "serve-favicon": "^2.5.0",
+    "style-loader": "^0.21.0",
     "webpack": "^3.11.0",
     "webpack-assets-manifest": "^1.0.0",
-    "webpack-merge": "^4.1.1",
-    "winston": "^2.4.0"
+    "webpack-merge": "^4.1.2",
+    "winston": "^2.4.2"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "eslint": "^4.17.0",
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.0",
     "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-node": "^6.0.0",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0",
     "jasmine": "^3.0.0",
     "jasmine-core": "^2.99.1",
-    "nodemon": "^1.15.0",
-    "proxyquire": "^1.8.0"
+    "nodemon": "^1.17.4",
+    "proxyquire": "^2.0.1"
   }
 }
