--- a/.env.sample
+++ b/.env.sample
@@ -5,7 +5,6 @@ CACHE_VIEWS=false
 GOOGLE_TAG_MANAGER_KEY=
 GOOGLE_TAG_MANAGER_SUFFIX=
 
-API_CLIENT_SCOPE=
 API_ROOT=
-API_CLIENT_ID=
-API_CLIENT_SECRET=
+API_CLIENT_HAWK_ACCESS_KEY_ID=
+API_CLIENT_HAWK_SECRET_ACCESS_KEY=
