--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   },
   "homepage": "https://github.com/uktrade/omis-frontend#readme",
   "dependencies": {
-    "axios": "^0.18.0",
+    "@hapi/hawk": "^7.1.2",
+    "axios": "^0.18.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -66,25 +67,27 @@
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "node-sass": "^4.9.0",
-    "npm-run-all": "^4.1.3",
+    "npm-run-all": "^4.1.5",
     "numeral": "^2.0.6",
     "nunjucks": "^3.1.3",
     "nunjucks-markdown": "^2.0.1",
     "postcss-loader": "^2.1.5",
     "raven": "^2.6.2",
     "request": "^2.87.0",
-    "request-promise-native": "^1.0.5",
     "resolve-url-loader": "^2.3.0",
     "serve-favicon": "^2.5.0",
     "style-loader": "^0.21.0",
-    "webpack": "^3.11.0",
+    "webpack": "^3.12.0",
     "webpack-assets-manifest": "^1.0.0",
     "webpack-merge": "^4.1.2",
     "winston": "^2.4.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
-    "eslint": "^4.19.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "chai-subset": "^1.6.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
@@ -92,6 +95,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "jasmine": "^3.1.0",
     "jasmine-core": "^3.1.0",
+    "nock": "^12.0.3",
     "nodemon": "^1.17.5",
     "proxyquire": "^2.0.1"
   }
