--- a/package.json
+++ b/package.json
@@ -98,5 +98,8 @@
     "nock": "^12.0.3",
     "nodemon": "^2.0.20",
     "proxyquire": "^2.0.1"
+  },
+  "overrides": {
+    "js-yaml": "3.14.1"
   }
 }
