--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "proxyquire": "^2.0.1"
   },
   "overrides": {
-    "js-yaml": "3.14.1"
+    "js-yaml": "3.14.1",
+    "semver-regex": "3.1.3"
   }
 }
