--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   },
   "overrides": {
     "js-yaml": "3.14.1",
-    "semver-regex": "3.1.3"
+    "semver-regex": "3.1.3",
+    "trim-newlines": "3.0.1"
   }
 }
