--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
   "overrides": {
     "js-yaml": "3.14.1",
     "semver-regex": "3.1.3",
-    "trim-newlines": "3.0.1"
+    "trim-newlines": "3.0.1",
+    "is-svg": "4.3.0"
   }
 }
