--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "js-yaml": "3.14.1",
     "semver-regex": "3.1.3",
     "trim-newlines": "3.0.1",
-    "is-svg": "4.3.0"
+    "is-svg": "4.3.0",
+    "glob-parent": "5.1.2"
   }
 }
