--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "semver-regex": "3.1.3",
     "trim-newlines": "3.0.1",
     "is-svg": "4.3.0",
-    "glob-parent": "5.1.2"
+    "glob-parent": "5.1.2",
+    "got": "11.8.5"
   }
 }
