--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "trim-newlines": "3.0.1",
     "is-svg": "4.3.0",
     "glob-parent": "5.1.2",
-    "got": "11.8.5"
+    "got": "11.8.5",
+    "postcss": "7.0.36"
   }
 }
