--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "is-svg": "4.3.0",
     "glob-parent": "5.1.2",
     "got": "11.8.5",
-    "postcss": "7.0.36"
+    "postcss": "7.0.36",
+    "color-string": "1.5.5"
   }
 }
