--- a/package.json
+++ b/package.json
@@ -98,5 +98,8 @@
     "nock": "^12.0.3",
     "nodemon": "^1.17.5",
     "proxyquire": "^2.0.1"
+  },
+  "overrides": {
+    "is-svg": "4.3.0"
   }
 }
