--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   },
   "overrides": {
     "is-svg": "4.3.0",
-    "nth-check": "2.0.1"
+    "nth-check": "2.0.1",
+    "object-path": "0.11.8"
   }
 }
