--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
   "overrides": {
     "is-svg": "4.3.0",
     "nth-check": "2.0.1",
-    "object-path": "0.11.8"
+    "object-path": "0.11.8",
+    "semver-regex": "3.1.3"
   }
 }
