--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "is-svg": "4.3.0",
     "nth-check": "2.0.1",
     "object-path": "0.11.8",
-    "semver-regex": "3.1.3"
+    "semver-regex": "3.1.3",
+    "trim-newlines": "3.0.1"
   }
 }
