--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "nth-check": "2.0.1",
     "object-path": "0.11.8",
     "semver-regex": "3.1.3",
-    "trim-newlines": "3.0.1"
+    "trim-newlines": "3.0.1",
+    "glob-parent": "5.1.2"
   }
 }
