--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "object-path": "0.11.8",
     "semver-regex": "3.1.3",
     "trim-newlines": "3.0.1",
-    "glob-parent": "5.1.2"
+    "glob-parent": "5.1.2",
+    "js-yaml": "3.13.1"
   }
 }
