--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "semver-regex": "3.1.3",
     "trim-newlines": "3.0.1",
     "glob-parent": "5.1.2",
-    "js-yaml": "3.13.1"
+    "js-yaml": "3.13.1",
+    "got": "11.8.5"
   }
 }
