--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "trim-newlines": "3.0.1",
     "glob-parent": "5.1.2",
     "js-yaml": "3.13.1",
-    "got": "11.8.5"
+    "got": "11.8.5",
+    "postcss": "7.0.36"
   }
 }
