--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "js-yaml": "3.13.1",
     "got": "11.8.5",
     "postcss": "7.0.36",
-    "color-string": "1.5.5"
+    "color-string": "1.5.5",
+    "ajv": "6.12.3"
   }
 }
