Add yargs-parser to overrides

--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "got": "11.8.5",
     "postcss": "7.0.36",
     "color-string": "1.5.5",
-    "ajv": "6.12.3"
+    "ajv": "6.12.3",
+    "yargs-parser": "13.1.2"
   }
 }
