--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "postcss": "7.0.36",
     "color-string": "1.5.5",
     "ajv": "6.12.3",
-    "yargs-parser": "13.1.2"
+    "yargs-parser": "13.1.2",
+    "mem": "4.0.0"
   }
 }
