--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
   },
   "homepage": "https://github.com/uktrade/omis-frontend#readme",
   "dependencies": {
+    "@babel/core": "^7.17.2",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/preset-env": "^7.10.4",
+    "autoprefixer": "^9.8.5",
     "axios": "^0.21.2",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-loader": "^8.1.0",
     "body-parser": "^1.18.3",
     "browser-sync": "^2.24.4",
     "browser-sync-webpack-plugin": "^2.2.2",
@@ -47,7 +48,7 @@
     "client-sessions": "^0.8.0",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
-    "css-loader": "^0.28.11",
+    "css-loader": "^5.2.7",
     "csurf": "^1.9.0",
     "date-fns": "^1.29.0",
     "del-cli": "^1.1.0",
@@ -55,30 +56,31 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-sslify": "^1.2.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "fast-sass-loader": "^2.0.1",
-    "file-loader": "^1.1.11",
+    "file-loader": "^6.0.0",
     "govuk_frontend_toolkit": "^7.5.0",
     "hawk": "^9.0.1",
-    "image-webpack-loader": "^4.3.0",
+    "image-webpack-loader": "^6.0.0",
     "lodash": "^4.17.10",
     "markdown-it": "^12.3.2",
     "memorystore": "^1.6.0",
+    "mini-css-extract-plugin": "^1.6.2",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
-    "node-sass": "^8.0.0",
     "npm-run-all": "^4.1.5",
     "numeral": "^2.0.6",
     "nunjucks": "^3.1.3",
     "nunjucks-markdown": "^2.0.1",
-    "postcss-loader": "^2.1.5",
+    "postcss-loader": "^4.1.0",
     "raven": "^2.6.2",
     "request": "^2.87.0",
-    "resolve-url-loader": "^2.3.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.43.5",
+    "sass-loader": "^10.0.4",
     "serve-favicon": "^2.5.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^3.12.0",
-    "webpack-assets-manifest": "^1.0.0",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.46.0",
+    "webpack-assets-manifest": "^4.0.6",
+    "webpack-cli": "^4.9.2",
     "webpack-merge": "^4.1.2",
     "winston": "^2.4.2"
   },
@@ -106,7 +108,6 @@
     "trim-newlines": "3.0.1",
     "glob-parent": "5.1.2",
     "js-yaml": "3.13.1",
-    "postcss": "7.0.36",
     "color-string": "1.5.5",
     "ajv": "6.12.3",
     "yargs-parser": "13.1.2",
