--- a/package.json
+++ b/package.json
@@ -40,15 +40,15 @@
     "@babel/preset-env": "^7.10.4",
     "autoprefixer": "^9.8.5",
     "axios": "^0.21.2",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^9.1.0",
     "body-parser": "^1.18.3",
-    "browser-sync": "^2.24.4",
-    "browser-sync-webpack-plugin": "^2.2.2",
+    "browser-sync": "^2.27.10",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "case": "^1.5.5",
     "client-sessions": "^0.8.0",
     "compression": "^1.7.2",
     "cookie-parser": "^1.4.3",
-    "css-loader": "^5.2.7",
+    "css-loader": "^6.7.2",
     "csurf": "^1.9.0",
     "date-fns": "^1.29.0",
     "del-cli": "^1.1.0",
@@ -56,32 +56,31 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "express-sslify": "^1.2.0",
-    "file-loader": "^6.0.0",
     "govuk_frontend_toolkit": "^7.5.0",
     "hawk": "^9.0.1",
-    "image-webpack-loader": "^6.0.0",
+    "image-webpack-loader": "^8.1.0",
     "lodash": "^4.17.10",
     "markdown-it": "^12.3.2",
     "memorystore": "^1.6.0",
-    "mini-css-extract-plugin": "^1.6.2",
+    "mini-css-extract-plugin": "^2.6.1",
     "moment": "^2.22.2",
     "morgan": "^1.9.0",
     "npm-run-all": "^4.1.5",
     "numeral": "^2.0.6",
     "nunjucks": "^3.1.3",
     "nunjucks-markdown": "^2.0.1",
-    "postcss-loader": "^4.1.0",
+    "postcss-loader": "^7.0.1",
     "raven": "^2.6.2",
     "request": "^2.87.0",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.43.5",
-    "sass-loader": "^10.0.4",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "serve-favicon": "^2.5.0",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.46.0",
-    "webpack-assets-manifest": "^4.0.6",
-    "webpack-cli": "^4.9.2",
-    "webpack-merge": "^4.1.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
+    "webpack-assets-manifest": "^5.1.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.8.0",
     "winston": "^2.4.2"
   },
   "devDependencies": {
@@ -101,16 +100,8 @@
     "proxyquire": "^2.0.1"
   },
   "overrides": {
-    "is-svg": "4.3.0",
-    "nth-check": "2.0.1",
-    "object-path": "0.11.8",
     "semver-regex": "3.1.4",
     "trim-newlines": "3.0.1",
-    "glob-parent": "5.1.2",
-    "js-yaml": "3.13.1",
-    "color-string": "1.5.5",
-    "ajv": "6.12.3",
-    "yargs-parser": "13.1.2",
-    "mem": "4.0.0"
+    "glob-parent": "5.1.2"
   }
 }
