--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "proxyquire": "^2.0.1"
   },
   "overrides": {
-    "semver-regex": "3.1.4"
+    "semver-regex": "3.1.4",
+    "qs": "6.2.4"
   }
 }
