--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "semver-regex": "3.1.4",
     "qs": "6.2.4",
     "ua-parser-js": "1.0.33",
-    "http-cache-semantics": "4.1.1"
+    "http-cache-semantics": "4.1.1",
+    "semver": "7.5.2"
   }
 }
