--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "qs": "6.2.4",
     "ua-parser-js": "1.0.33",
     "http-cache-semantics": "4.1.1",
-    "semver": "7.5.2"
+    "semver": "7.5.2",
+    "axios": "^1.6.2"
   }
 }
