create initial dockerfile, docker-compose and makefile so that omis frontend can run in docker

--- a/package.json
+++ b/package.json
@@ -86,6 +86,11 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "image-minimizer-webpack-plugin": "^4.0.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^10.0.1",
     "jasmine": "^5.1.0",
     "jasmine-core": "^5.1.2",
     "nock": "^13.5.3",
