change dockerfile to use the frontend dependencies, add e2e tests command to makefile

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build": "npm run clean && webpack",
     "test": "npm run test:unit",
     "test:unit": "NODE_ENV=development; LOG_LEVEL=error; JASMINE_CONFIG_PATH=src/test/app/jasmine.json jasmine",
+    "test:e2e": "CYPRESS_coverage=false cypress run --browser chrome",
+    "test:e2e:watch": "CYPRESS_coverage=false cypress open --browser chrome",
     "lint": "npm-run-all lint:all:*",
     "lint:all:js": "eslint ./test ./src",
     "lint:modified:js": "CHANGED_FILES=$(git diff --staged --name-only -- '*.js'); if [ \"$CHANGED_FILES\" ]; then eslint $(echo $CHANGED_FILES); fi",
@@ -86,7 +88,7 @@
     "chai": "^4.3.10",
     "chai-as-promised": "^7.1.1",
     "chai-subset": "^1.6.0",
-    "cypress": "^13.7.0",
+    "cypress": "^13.6.6",
     "eslint": "^8.57.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
