update circle config file due to error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     machine:
       image: ubuntu-2004:2024.01.1
       docker_layer_caching: true
-    parallelism: true
+    parallelism: 1
     resource_class: xlarge
     steps:
       - checkout
