--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "axios": "^1.6.2",
     "babel-loader": "^9.1.3",
     "body-parser": "^1.20.2",
-    "browser-sync": "^2.29.3",
-    "browser-sync-webpack-plugin": "^2.3.0",
+    "browser-sync": "^3.0.2",
+    "browser-sync-v3-webpack-plugin": "^0.1.0",
     "case": "^1.5.5",
     "client-sessions": "^0.8.0",
     "compression": "^1.7.2",
@@ -100,9 +100,8 @@
   "overrides": {
     "semver-regex": "3.1.4",
     "qs": "6.2.4",
-    "ua-parser-js": "1.0.33",
     "http-cache-semantics": "4.1.1",
-    "semver": "7.5.2",
-    "axios": "^1.6.2"
+    "semver": "^7.5.2",
+    "trim-newlines": "^3.0.1"
   }
 }
