add instructions to the readme

--- a/.env.sample
+++ b/.env.sample
@@ -22,6 +22,7 @@ DJANGO_SECRET_KEY=topSecret
 DJANGO_SETTINGS_MODULE=config.settings.local
 OPENSEARCH_URL=http://opensearch:9200
 OPENSEARCH_INDEX_PREFIX=test_index
+ES_APM_ENABLED=False
 POSTGRES_URL=tcp://postgres:5432
 REDIS_BASE_URL=redis://redis:6379
 SSO_ENABLED=false
