Add support for multiple tests and move out of ignored folder

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "build": "npm run clean && webpack",
     "test": "npm run test:unit",
     "test:unit": "NODE_ENV=development; LOG_LEVEL=error; JASMINE_CONFIG_PATH=src/test/app/jasmine.json jasmine",
-    "test:e2e": "CYPRESS_coverage=false cypress run --browser chrome",
-    "test:e2e:watch": "CYPRESS_coverage=false cypress open --browser chrome",
+    "test:e2e": "CYPRESS_coverage=false cypress run --config '{\"specPattern\":[\"test/end-to-end/cypress/*.js\"]}' --browser chrome",
+    "test:e2e:watch": "CYPRESS_coverage=false cypress open --config '{\"specPattern\":[\"test/end-to-end/cypress/*.js\"]}' --e2e --browser chrome",
     "lint": "npm-run-all lint:all:*",
     "lint:all:js": "eslint ./test ./src",
     "lint:modified:js": "CHANGED_FILES=$(git diff --staged --name-only -- '*.js'); if [ \"$CHANGED_FILES\" ]; then eslint $(echo $CHANGED_FILES); fi",
