--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clean": "del .build",
     "build": "npm run clean && webpack",
     "test": "npm run test:unit",
-    "test:unit": "NODE_ENV=development; LOG_LEVEL=error; JASMINE_CONFIG_PATH=src/test/app/jasmine.json jasmine",
+    "test:unit": "NODE_ENV=development LOG_LEVEL=info JASMINE_CONFIG_PATH=src/test/app/jasmine.json jasmine",
     "test:e2e": "CYPRESS_coverage=false cypress run --config '{\"specPattern\":[\"test/end-to-end/cypress/*.js\"]}' --browser chrome",
     "test:e2e:watch": "CYPRESS_coverage=false cypress open --config '{\"specPattern\":[\"test/end-to-end/cypress/*.js\"]}' --e2e --browser chrome",
     "lint": "npm-run-all lint:all:*",
@@ -76,6 +76,8 @@
     "sass": "^1.75.0",
     "sass-loader": "^14.2.0",
     "serve-favicon": "^2.5.0",
+    "sinon": "^17.0.1",
+    "std-mocks": "^2.0.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
     "webpack-assets-manifest": "^5.2.1",
