--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -5,7 +5,7 @@ services:
       - api
 
   api:
-    image: gcr.io/sre-docker-registry/github.com/uktrade/data-hub-api:v41.9.1
+    image: gcr.io/sre-docker-registry/data-hub-api:latest
     env_file: .env
     environment:
       DEBUG: "False"
@@ -37,7 +37,7 @@ services:
     command: /app/setup-uat.sh || echo "all good"
 
   rq:
-    image: gcr.io/sre-docker-registry/github.com/uktrade/data-hub-api:v41.9.1
+    image: gcr.io/sre-docker-registry/data-hub-api:latest
     env_file: .env
     depends_on:
       - postgres
