--- a/package.json
+++ b/package.json
@@ -90,14 +90,17 @@
     "chai-subset": "^1.6.0",
     "cypress": "^13.8.1",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "jasmine": "^5.1.0",
     "jasmine-core": "^5.1.2",
     "nock": "^13.5.4",
     "nodemon": "^3.1.0",
+    "prettier": "^3.2.5",
     "proxyquire": "^2.0.1"
   },
   "overrides": {
