--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,12 +5,12 @@
 
 version: 2
 updates:
-  - package-ecosystem: "npm"
-    directory: "/"
+  - package-ecosystem: 'npm'
+    directory: '/'
     schedule:
-      interval: "weekly"
+      interval: 'weekly'
     open-pull-requests-limit: 10
     ignore:
-    - dependency-name: date-fns 
-      versions:
-        - "> 2.3.0"
+      - dependency-name: date-fns
+        versions:
+          - '> 2.3.0'
