--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -5,7 +5,7 @@ services:
       - api
 
   api:
-    image: gcr.io/sre-docker-registry/github.com/uktrade/data-hub-api:main
+    image: gcr.io/sre-docker-registry/data-hub-api:latest
     env_file: .env
     environment:
       DEBUG: 'False'
