--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   e2e_tests:
     machine:
       image: ubuntu-2004:2024.01.1
-      docker_layer_caching: true
+      docker_layer_caching: false
     parallelism: 1
     resource_class: xlarge
     steps:
