Add adhoc testing to OMIS against datahub dev

--- a/.env.sample
+++ b/.env.sample
@@ -27,3 +27,8 @@ POSTGRES_URL=tcp://postgres:5432
 REDIS_BASE_URL=redis://redis:6379
 SSO_ENABLED=false
 
+
+# -------------------------------------------
+# Testing settings
+# -------------------------------------------
+TESTING_OMIS_SITE_URL=http://localhost:4000
