--- a/docker-compose.backend.yml
+++ b/docker-compose.backend.yml
@@ -37,7 +37,7 @@ services:
     command: /app/setup-uat.sh || echo "all good"
 
   rq:
-    image: gcr.io/sre-docker-registry/data-hub-api:latest
+    image: gcr.io/sre-docker-registry/github.com/uktrade/data-hub-api:main
     env_file: .env
     depends_on:
       - postgres
