--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@babel/core": "^7.24.7",
     "@babel/plugin-transform-class-properties": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
+    "@sentry/node": "^8.14.0",
+    "@sentry/profiling-node": "^8.14.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.0",
     "babel-loader": "^9.1.3",
@@ -71,7 +73,6 @@
     "nunjucks": "^3.2.4",
     "nunjucks-markdown": "^2.0.1",
     "postcss-loader": "^8.1.1",
-    "raven": "^2.6.2",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
