--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint:modified:js": "CHANGED_FILES=$(git diff --staged --name-only -- '*.js'); if [ \"$CHANGED_FILES\" ]; then eslint $(echo $CHANGED_FILES); fi",
     "watch:app:client": "webpack --watch --progress",
     "watch:app:server": "nodemon $NODE_DEBUG_OPTION --use-strict",
-    "heroku-postbuild": "npm rebuild && npm run build"
+    "heroku-postbuild": "npm rebuild && npm run build",
+    "dependabot:update-sentry": "npm install @sentry/node@latest @sentry/profiling-node@latest"
   },
   "repository": {
     "type": "git",
