--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,15 +1,10 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
-
 version: 2
 updates:
   - package-ecosystem: 'npm'
     directory: '/'
     schedule:
       interval: 'weekly'
-    open-pull-requests-limit: 10
+    open-pull-requests-limit: 0
     ignore:
       - dependency-name: date-fns
         versions:
@@ -17,3 +12,7 @@ updates:
       - dependency-name: imagemin-svgo
         versions:
           - '> 10.0.1'
+      # These are part of dependency groups and should be updated via the relevant script.
+      - dependency-name: "@sentry/profiling-node"
+        versions:
+          - ">= 0"
