--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lint:modified:js": "CHANGED_FILES=$(git diff --staged --name-only -- '*.js'); if [ \"$CHANGED_FILES\" ]; then eslint $(echo $CHANGED_FILES); fi",
     "watch:app:client": "webpack --watch --progress",
     "watch:app:server": "nodemon $NODE_DEBUG_OPTION --use-strict",
-    "heroku-postbuild": "npm rebuild && npm run build"
+    "heroku-postbuild": "npm rebuild && npm run build",
+    "dependabot:update-sentry": "npm install @sentry/node@latest @sentry/profiling-node@latest"
   },
   "repository": {
     "type": "git",
@@ -35,8 +36,8 @@
     "@babel/core": "^7.24.7",
     "@babel/plugin-transform-class-properties": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
-    "@sentry/node": "^8.14.0",
-    "@sentry/profiling-node": "^8.14.0",
+    "@sentry/node": "^8.15.0",
+    "@sentry/profiling-node": "^8.15.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.0",
     "babel-loader": "^9.1.3",
@@ -81,7 +82,7 @@
     "webpack": "^5.92.1",
     "webpack-assets-manifest": "^5.2.1",
     "webpack-cli": "^5.1.4",
-    "webpack-merge": "^5.10.0",
+    "webpack-merge": "^6.0.1",
     "winston": "^3.13.0"
   },
   "devDependencies": {
@@ -89,14 +90,14 @@
     "chai": "^5.1.1",
     "chai-as-promised": "^8.0.0",
     "chai-subset": "^1.6.0",
-    "cypress": "^13.12.0",
+    "cypress": "^13.13.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-promise": "^6.2.0",
+    "eslint-plugin-promise": "^6.4.0",
     "jasmine": "^5.1.0",
     "jasmine-core": "^5.1.2",
     "nock": "^13.5.4",
