--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "express": {
       "path-to-regexp": "0.1.10"
     },
-    "send": "0.19.0"
+    "send": "0.19.0",
+    "serve-static": "1.16.2"
   }
 }
