--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
       "path-to-regexp": "0.1.10"
     },
     "send": "0.19.0",
-    "serve-static": "1.16.2"
+    "serve-static": "1.16.2",
+    "cross-spawn": "^6.0.6"
   }
 }
