Update eslint to v9 and install required dependencies

--- a/package.json
+++ b/package.json
@@ -86,19 +86,22 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.26.5",
+    "@eslint/compat": "^1.2.6",
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.19.0",
     "browser-sync": "^3.0.3",
     "browser-sync-v3-webpack-plugin": "^0.1.0",
     "chai": "^5.1.2",
     "chai-as-promised": "^8.0.1",
     "chai-subset": "^1.6.0",
     "cypress": "^14.0.1",
-    "eslint": "^8.57.1",
+    "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
-    "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-promise": "^6.6.0",
+    "globals": "^15.14.0",
     "jasmine": "^5.5.0",
     "jasmine-core": "^5.5.0",
     "nock": "^14.0.0",
